--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">experiencia</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educação</a></li>
+        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educação</a></li> -->
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>
         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
@@ -86,116 +86,179 @@
           </div>
           <div class="flex-shrink-0"><span class="text-primary">09/2019 até 09/2020</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Lorem ipsum</h3>
-            <div class="subheading mb-3">Empresa</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptate veniam, perspiciatis
-              voluptatem ex perferendis, ipsum quia nostrum, minima molestiae possimus libero nobis placeat eum aliquam
-              numquam? Totam, eius vel!</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">March 2000 - March 2000 </span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Lorem ipsum</h3>
-            <div class="subheading mb-3">Empresa</div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam architecto possimus sint quo id et
-              expedita cumque consequatur tempore magni? Debitis, dolore eius accusamus maiores architecto sed corrupti
-              veniam ipsa!</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">March 2000 - March 2000 </span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Lorem ipsum</h3>
-            <div class="subheading mb-3">Empresa</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aliquam iste, cum quibusdam tempora
-              accusamus ad optio nesciunt beatae quisquam. Aliquam itaque molestias velit quibusdam natus quas quaerat
-              minima! Harum.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">March 2000 - March 2000 </span></div>
-        </div>
-      </div>
-    </section>
-    <hr class="m-0" />
-    <!-- Education-->
-    <section class="resume-section" id="education">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Suas qualificações</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Lorem Ipsum</h3>
-            <div class="subheading mb-3">Instituição</div>
-            <div>Seu curso</div>
-            <p>lorem</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Março 2020</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Lorem Ipsum</h3>
-            <div class="subheading mb-3">Seu curso</div>
-            <p>lorem</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Março 2020</span></div>
-        </div>
-      </div>
-    </section>
-    <hr class="m-0" />
-    <!-- Skills-->
-    <section class="resume-section" id="skills">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Habilidades</h2>
-        <div class="subheading mb-3">conhecimentos</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-          <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-          <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-          <li class="list-inline-item"><i class="fab fa-react"></i></li>
-          <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-          <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-          <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-          <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-          <li class="list-inline-item"><i class="fab fa-js"></i></li>
 
-        </ul>
-        <div class="subheading mb-3">Checklist</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            lorem ipsum, lorem ipsum, lorem ipsum
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            lorem ipsum, lorem ipsum, lorem ipsum
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            lorem ipsum, lorem ipsum, lorem ipsum
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            lorem ipsum, lorem ipsum, lorem ipsum
-          </li>
-        </ul>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Back-end Developer</h3>
+            <div class="subheading mb-3">Yara Fertilizantes (DBSERVER)</div>
+            <p>Fiz parte de uma equipe com foco na área de inovação, responsável pelo desenvolvimento de novos
+              projetos (MVP) e testes de provas de conceito (POCS).
+              Trabalhei no projeto com:
+              -Desenvolvimento web utilizando Node.js, React.js, Express e AWS.
+              -Persistência de dados utilizando MySQL e Firebase Realtime Database.
+              -Desenvolvimento de API’S utilizando Node.js, Express e AWS SNS.
+              -Desenvolvimento web baseado em métodos ágeis utilizando Scrum.
+              -Controle de versão e tarefas utilizando Gitlab e Trello.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">09/2019 até 09/2020</span></div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Estagiário em Desenvolvedor Web (Node.js)</h3>
+            <div class="subheading mb-3">Silo Verde</div>
+            <p>Fiz parte de uma equipe com foco no desenvolvimento de uma plataforma de monitoramento remoto
+              de Silos de grãos, com o intuito de melhorar a estocagem e a qualidade dos grãos, e auxilar o cliente
+              final a gerenciar seu estoque de forma prática e digital.
+              Trabalhei no projeto com:
+              -Desenvolvimento web utilizando Node.js.
+              -Controle de versão utlizando Gitlab.
+              -Frontend com VUE.js.
+              -Backend utilizando Node.js e AWS Serverless .
+              -Persistência de dados utilizando banco de dados DynamoDB</p>
+          </div>
+
+          <div class="flex-shrink-0"><span class="text-primary">05/2019 até 06/2019 </span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Estagiário em Desenvolvedor Web em DZ Estúdio</h3>
+            <div class="subheading mb-3">DZ Estúdio</div>
+            <p>Fiz parte de uma equipe com foco no desenvolvimento e manutenção de plataformas de clientes,
+              implementando novas funcionalidades e concertando eventuais bugs.
+              Algumas das tecnologias utilizadas:
+              -Desenvolvimento web utilizando PHP.
+              -Controle de versão com BitBucket.
+              -Frontend com SASS CSS e HTML5
+              -Backend utilizando PHP Laravel Framework.
+              -Desenvolvimento e suporte em Wordpress.
+              -Biuld de projeto utilizando Docker.
+              -Persistência utilizando banco de dados relacional MYSQL</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">05/2018 até 10/2018</span></div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Estagiário em Desenvolvedor Web em Aceleradora Thoughtworks </h3>
+            <div class="subheading mb-3">DZ Estúdio</div>
+            <p>Fiz parte de uma equipe ágil com foco no desenvolvimento de uma plataforma de cursos online
+              totalmente gratuita na área da Tecnologia da Informação com o foco em pessoas de baixa renda.
+              Tecnologias utilizadas para este projeto:
+              -Desenvolvimento web baseado em métodos ágeis utilizando Kanban, Scrum, Code Review, Pair
+              Programing, Lean Canvas .
+              -Controle de versão com GitHub e Pull Request .
+              -Frontend com Bulma CSS, SASS CSS, Handelbars JS e HTML5
+              -Backend JavaScript utilizando Node JS com Express.
+              -Persistência utilizando MongoDB e Mongoose.
+              -Integração Contínua com TravisCI.
+              -Testes com Nightwatch, Chai e Sinon.
+              -Github Projeto: https://github.com/aceleradora-TW/conhecimento-livre
+              -Projeto: http://www.conhecimentolivre.com</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">09/2017 até 01/2018</span></div>
+        </div>
+
+        <div class="d-flex flex-column flex-md-row justify-content-between">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Estagiário em R&T People Solutions </h3>
+            <div class="subheading mb-3">DZ Estúdio</div>
+            <p>Fui responsável pelo desenvolvimento e manutenção da plataforma online do grupo RT3,
+              implementando novas funcionalidades e concertando eventuais bugs, também fui responsável pela
+              criação e edição de imagem e videos do grupoRT3.
+              Neste estágio utilizei:
+              -Desenvolvimento Web utilizando HTML5, CSS3 e Javascript.
+              -Desenvolvimento de banners/templates utilizando Adobe Photoshop CS6.
+              -Desenvolvimento de conteudo Audio/Visual para a plataforma Youtube utilizando Sony Vegas Movie
+              Studio 13.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">06/2017 até 08/2017</span></div>
+        </div>
+
+
       </div>
-    </section>
-    <hr class="m-0" />
-    <!-- Interests-->
-    <section class="resume-section" id="interests">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Interesses</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt nam consequatur officia reprehenderit, ad
-          autem explicabo nihil earum excepturi, sint illo sit consequuntur aliquam odio ducimus error ea. Quaerat,
-          tempora!</p>
-        <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos nulla omnis placeat
-          reiciendis adipisci totam excepturi commodi, dolor dolores id consequatur nihil ipsa esse ullam rem cupiditate
-          quia quas.</p>
+  </div>
+
+
+  </div>
+  </section>
+
+  <hr class="m-0" />
+  <!-- Education
+  <section class="resume-section" id="education">
+    <div class="resume-section-content">
+      <h2 class="mb-5">Suas qualificações</h2>
+      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="flex-grow-1">
+          <h3 class="mb-0">Lorem Ipsum</h3>
+          <div class="subheading mb-3">Instituição</div>
+          <div>Seu curso</div>
+          <p>lorem</p>
+        </div>
+        <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Março 2020</span></div>
       </div>
-    </section>
-    <hr class="m-0" />
-    <!-- Awards
+      <div class="d-flex flex-column flex-md-row justify-content-between">
+        <div class="flex-grow-1">
+          <h3 class="mb-0">Lorem Ipsum</h3>
+          <div class="subheading mb-3">Seu curso</div>
+          <p>lorem</p>
+        </div>
+        <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Março 2020</span></div>
+      </div>
+    </div>
+  </section>
+  <hr class="m-0" /> -->
+  <!-- Skills-->
+  <section class="resume-section" id="skills">
+    <div class="resume-section-content">
+      <h2 class="mb-5">Habilidades</h2>
+      <div class="subheading mb-3">conhecimentos</div>
+      <ul class="list-inline dev-icons">
+        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
+        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
+        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+        <li class="list-inline-item"><i class="fab fa-react"></i></li>
+        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
+        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+        <li class="list-inline-item"><i class="fab fa-js"></i></li>
+
+      </ul>
+      <div class="subheading mb-3">Checklist</div>
+      <ul class="fa-ul mb-0">
+        <li>
+          <span class="fa-li"><i class="fas fa-check"></i></span>
+          Back-end Node.js
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-check"></i></span>
+          Frontend eem React.js
+        </li>
+        <li>
+          <span class="fa-li"><i class="fas fa-check"></i></span>
+          Designer responsivo
+        </li>
+
+      </ul>
+    </div>
+  </section>
+  <hr class="m-0" />
+  <!-- Interests-->
+  <!-- <section class="resume-section" id="interests">
+    <div class="resume-section-content">
+      <h2 class="mb-5">Interesses</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt nam consequatur officia reprehenderit, ad
+        autem explicabo nihil earum excepturi, sint illo sit consequuntur aliquam odio ducimus error ea. Quaerat,
+        tempora!</p>
+      <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos nulla omnis placeat
+        reiciendis adipisci totam excepturi commodi, dolor dolores id consequatur nihil ipsa esse ullam rem cupiditate
+        quia quas.</p>
+    </div>
+  </section> -->
+  <hr class="m-0" />
+  <!-- Awards
     <section class="resume-section" id="awards">
       <div class="resume-section-content">
         <h2 class="mb-5">Awards & Certifications</h2>
@@ -242,13 +305,13 @@
       </div>
     </section>
   </div> -->
-    <!-- Bootstrap core JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+  <!-- Third party plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
