--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">experiencia</a></li>
         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educação</a></li> -->
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li>
+        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interesses</a></li> -->
         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
       </ul>
     </div>
