--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">Início </a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">experiencia</a></li>
         <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educação</a></li> -->
