--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </nav>
   <!-- Page Content-->
-  <div class="container-fluid p-0" href="#home">
+  <div class="container-fluid p-0" id="home" href="home">
     <!-- About-->
     <section class="resume-section" id="about">
       <div class="resume-section-content">
