--- a/index.html
+++ b/index.html
@@ -1,314 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <title>Portifolio  Renan Schmitt</title>
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-  <!-- Font Awesome icons (free version)-->
-  <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-  <!-- Google fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-  <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="css/styles.css" rel="stylesheet" />
-</head>
-
-<body id="page-top">
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Renan Schmitt</span>
-      <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-          src="assets/img/profile.jpeg" alt="" /></span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-        class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">experiencia</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
-      </ul>
-    </div>
-  </nav>
-  <!-- Page Content-->
-  <div class="container-fluid p-0" id="home" href="home">
-    <!-- About-->
-    <section class="resume-section" id="about">
-      <div class="resume-section-content">
-        <h1 class="mb-0">
-          Renan
-          <span class="text-primary">Schmitt</span>
-        </h1>
-        <div class="subheading mb-5">
-          Desenvolvedor de Software & UX Designer<br>
-          <a href="mailto:joao@contato.com">renanschmitt.ti@gmail.com</a>
-        </div>
-        <p class="lead mb-5">Web Developer & UX Designer. Student of Computer Science at Universidade Luterana do Brasil
-          (ULBRA) -
-          Gravataí-RS.
-        </p>
-        <div class="social-icons">
-          <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-          <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-          <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
-        </div>
-      </div>
-    </section>
-    <hr class="m-0" />
-    <!-- Experience-->
-    <section class="resume-section" id="experience">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Sua carreira</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Desenvolvedor em Desenvolvedor Web (Node.js)</h3>
-            <div class="subheading mb-3">DBServer</div>
-            <p>Fiz parte de uma equipe com foco no desenvolvimento de produtos na área de E-commerce, com o
-              foco principal no desenvolvimento de uma plataforma de controle de pedidos, receita e incidentes,
-              integrada com o e-commerce Marketplace do Carrefour, atuando com desenvolvedor Fullstack.
-              Trabalhei no projeto com:
-              -Desenvolvimento web utilizando Node.js, React.js, Node.js e GCP Cloud Functions.
-              -Persistência de dados utilizando Firebase Realtime Database.
-              -Desenvolvimento de API’S utilizando Node.js, Express e Google Cloud Platform.
-              -Desenvolvimento web baseado em métodos ágeis utilizando Scrum.
-              -Controle de versão e tarefas utilizando BitBucket, Miro e Jira.
-            </p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">09/2019 até 09/2020</span></div>
-        </div>
-
-
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Back-end Developer</h3>
-            <div class="subheading mb-3">Yara Fertilizantes (DBSERVER)</div>
-            <p>Fiz parte de uma equipe com foco na área de inovação, responsável pelo desenvolvimento de novos
-              projetos (MVP) e testes de provas de conceito (POCS).
-              Trabalhei no projeto com:
-              -Desenvolvimento web utilizando Node.js, React.js, Express e AWS.
-              -Persistência de dados utilizando MySQL e Firebase Realtime Database.
-              -Desenvolvimento de API’S utilizando Node.js, Express e AWS SNS.
-              -Desenvolvimento web baseado em métodos ágeis utilizando Scrum.
-              -Controle de versão e tarefas utilizando Gitlab e Trello.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">09/2019 até 09/2020</span></div>
-        </div>
-
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Estagiário em Desenvolvedor Web (Node.js)</h3>
-            <div class="subheading mb-3">Silo Verde</div>
-            <p>Fiz parte de uma equipe com foco no desenvolvimento de uma plataforma de monitoramento remoto
-              de Silos de grãos, com o intuito de melhorar a estocagem e a qualidade dos grãos, e auxilar o cliente
-              final a gerenciar seu estoque de forma prática e digital.
-              Trabalhei no projeto com:
-              -Desenvolvimento web utilizando Node.js.
-              -Controle de versão utlizando Gitlab.
-              -Frontend com VUE.js.
-              -Backend utilizando Node.js e AWS Serverless .
-              -Persistência de dados utilizando banco de dados DynamoDB</p>
-          </div>
-
-          <div class="flex-shrink-0"><span class="text-primary">05/2019 até 06/2019 </span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Estagiário em Desenvolvedor Web em DZ Estúdio</h3>
-            <div class="subheading mb-3">DZ Estúdio</div>
-            <p>Fiz parte de uma equipe com foco no desenvolvimento e manutenção de plataformas de clientes,
-              implementando novas funcionalidades e concertando eventuais bugs.
-              Algumas das tecnologias utilizadas:
-              -Desenvolvimento web utilizando PHP.
-              -Controle de versão com BitBucket.
-              -Frontend com SASS CSS e HTML5
-              -Backend utilizando PHP Laravel Framework.
-              -Desenvolvimento e suporte em Wordpress.
-              -Biuld de projeto utilizando Docker.
-              -Persistência utilizando banco de dados relacional MYSQL</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">05/2018 até 10/2018</span></div>
-        </div>
-
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Estagiário em Desenvolvedor Web em Aceleradora Thoughtworks </h3>
-            <div class="subheading mb-3">DZ Estúdio</div>
-            <p>Fiz parte de uma equipe ágil com foco no desenvolvimento de uma plataforma de cursos online
-              totalmente gratuita na área da Tecnologia da Informação com o foco em pessoas de baixa renda.
-              Tecnologias utilizadas para este projeto:
-              -Desenvolvimento web baseado em métodos ágeis utilizando Kanban, Scrum, Code Review, Pair
-              Programing, Lean Canvas .
-              -Controle de versão com GitHub e Pull Request .
-              -Frontend com Bulma CSS, SASS CSS, Handelbars JS e HTML5
-              -Backend JavaScript utilizando Node JS com Express.
-              -Persistência utilizando MongoDB e Mongoose.
-              -Integração Contínua com TravisCI.
-              -Testes com Nightwatch, Chai e Sinon.
-              -Github Projeto: https://github.com/aceleradora-TW/conhecimento-livre
-              -Projeto: http://www.conhecimentolivre.com</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">09/2017 até 01/2018</span></div>
-        </div>
-
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Estagiário em R&T People Solutions </h3>
-            <div class="subheading mb-3">DZ Estúdio</div>
-            <p>Fui responsável pelo desenvolvimento e manutenção da plataforma online do grupo RT3,
-              implementando novas funcionalidades e concertando eventuais bugs, também fui responsável pela
-              criação e edição de imagem e videos do grupoRT3.
-              Neste estágio utilizei:
-              -Desenvolvimento Web utilizando HTML5, CSS3 e Javascript.
-              -Desenvolvimento de banners/templates utilizando Adobe Photoshop CS6.
-              -Desenvolvimento de conteudo Audio/Visual para a plataforma Youtube utilizando Sony Vegas Movie
-              Studio 13.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">06/2017 até 08/2017</span></div>
-        </div>
-
-
-      </div>
-  </div>
-
-
-  </div>
-  </section>
-
-  <hr class="m-0" />
-  <!-- Education
-  <section class="resume-section" id="education">
-    <div class="resume-section-content">
-      <h2 class="mb-5">Suas qualificações</h2>
-      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-        <div class="flex-grow-1">
-          <h3 class="mb-0">Lorem Ipsum</h3>
-          <div class="subheading mb-3">Instituição</div>
-          <div>Seu curso</div>
-          <p>lorem</p>
-        </div>
-        <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Março 2020</span></div>
-      </div>
-      <div class="d-flex flex-column flex-md-row justify-content-between">
-        <div class="flex-grow-1">
-          <h3 class="mb-0">Lorem Ipsum</h3>
-          <div class="subheading mb-3">Seu curso</div>
-          <p>lorem</p>
-        </div>
-        <div class="flex-shrink-0"><span class="text-primary">Agosto 2016 - Março 2020</span></div>
-      </div>
-    </div>
-  </section>
-  <hr class="m-0" /> -->
-  <!-- Skills-->
-  <section class="resume-section" id="skills">
-    <div class="resume-section-content">
-      <h2 class="mb-5">Habilidades</h2>
-      <div class="subheading mb-3">conhecimentos</div>
-      <ul class="list-inline dev-icons">
-        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-        <li class="list-inline-item"><i class="fab fa-js"></i></li>
-
-      </ul>
-      <div class="subheading mb-3">Checklist</div>
-      <ul class="fa-ul mb-0">
-        <li>
-          <span class="fa-li"><i class="fas fa-check"></i></span>
-          Back-end Node.js
-        </li>
-        <li>
-          <span class="fa-li"><i class="fas fa-check"></i></span>
-          Frontend eem React.js
-        </li>
-        <li>
-          <span class="fa-li"><i class="fas fa-check"></i></span>
-          Designer responsivo
-        </li>
-
-      </ul>
-    </div>
-  </section>
-  <hr class="m-0" />
-  <!-- Interests-->
-  <!-- <section class="resume-section" id="interests">
-    <div class="resume-section-content">
-      <h2 class="mb-5">Interesses</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt nam consequatur officia reprehenderit, ad
-        autem explicabo nihil earum excepturi, sint illo sit consequuntur aliquam odio ducimus error ea. Quaerat,
-        tempora!</p>
-      <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium eos nulla omnis placeat
-        reiciendis adipisci totam excepturi commodi, dolor dolores id consequatur nihil ipsa esse ullam rem cupiditate
-        quia quas.</p>
-    </div>
-  </section> -->
-  <hr class="m-0" />
-  <!-- Awards
-    <section class="resume-section" id="awards">
-      <div class="resume-section-content">
-        <h2 class="mb-5">Awards & Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Google Analytics Certified Developer
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Mobile Web Specialist - Google Certification
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            2
-            <sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            3
-            <sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005
-          </li>
-        </ul>
-      </div>
-    </section>
-  </div> -->
-  <!-- Bootstrap core JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-  <!-- Third party plugin JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-  <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Soluções digitais para a sua empresa."/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Arcadius Group</title><meta name="author" content="Arcadius Group"><meta name="keywords" content="Bott, agencia digital, agencia, digital, contrutora de sites, fazer website, sites baratos, mais acessos, desenvolvimento de sites, design de sites, marketing digital, desenvolvedora de sites, venda de sites mais acessos."/><meta name="robots" content="index"><meta name="description" content="Criação de Sites Porto Alegre, criação de sites POA, criação de sites responsivos, criação de sites profissionais, marketing digital, criação de site em Rio grande do Sul."><meta property="og:description" content="Criação de Sites Porto Alegre, criação de sites POA, criação de sites responsivos, criação de sites profissionais, marketing digital, criação de site em Rio grande do Sul."><meta property="og:title" content="Criação de sites em Porto Alegre RS - Arcadius Group Soluctions"><meta property="og:locale" content="pt_BR"><meta property="og:type" content="website"><meta property="og:site_name" content="Arcadius Group Soluctions"><meta property="og:url" content="//www.Bott.com.br/"><script async src="https://www.googletagmanager.com/gtag/js?id=G-41SY1PGJ71"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-41SY1PGJ71")</script><script>if("https:"!==location.protocol&&"http://localhost:3000/"!==location.href&&"http://localhost:5000/"!==location.href){const o="https://"+location.href.split("//")[1];location.replace(o)}</script><link href="/static/css/main.bfbdd1dc.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function t(t){for(var n,i,a=t[0],c=t[1],l=t[2],s=0,p=[];s<a.length;s++)i=a[s],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&p.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(f&&f(t);p.length;)p.shift()();return u.push.apply(u,l||[]),r()}function r(){for(var e,t=0;t<u.length;t++){for(var r=u[t],n=!0,a=1;a<r.length;a++){var c=r[a];0!==o[c]&&(n=!1)}n&&(u.splice(t--,1),e=i(i.s=r[0]))}return e}var n={},o={1:0},u=[];function i(t){if(n[t])return n[t].exports;var r=n[t]={i:t,l:!1,exports:{}};return e[t].call(r.exports,r,r.exports,i),r.l=!0,r.exports}i.e=function(e){var t=[],r=o[e];if(0!==r)if(r)t.push(r[2]);else{var n=new Promise((function(t,n){r=o[e]=[t,n]}));t.push(r[2]=n);var u,a=document.createElement("script");a.charset="utf-8",a.timeout=120,i.nc&&a.setAttribute("nonce",i.nc),a.src=function(e){return i.p+"static/js/"+({}[e]||e)+"."+{3:"7c452307"}[e]+".chunk.js"}(e);var c=new Error;u=function(t){a.onerror=a.onload=null,clearTimeout(l);var r=o[e];if(0!==r){if(r){var n=t&&("load"===t.type?"missing":t.type),u=t&&t.target&&t.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,r[1](c)}o[e]=void 0}};var l=setTimeout((function(){u({type:"timeout",target:a})}),12e4);a.onerror=a.onload=u,document.head.appendChild(a)}return Promise.all(t)},i.m=e,i.c=n,i.d=function(e,t,r){i.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,t){if(1&t&&(e=i(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(i.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var n in e)i.d(r,n,function(t){return e[t]}.bind(null,n));return r},i.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(t,"a",t),t},i.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},i.p="/",i.oe=function(e){throw console.error(e),e};var a=this["webpackJsonpbott-digital"]=this["webpackJsonpbott-digital"]||[],c=a.push.bind(a);a.push=t,a=a.slice();for(var l=0;l<a.length;l++)t(a[l]);var f=c;r()}([])</script><script src="/static/js/2.5d1d09d5.chunk.js"></script><script src="/static/js/main.487fe9e5.chunk.js"></script></body></html>
